# simlish

./: .gitignore  CITATIONS.md  generate.py  mkdocs.moustache  setup.cfg
profiles/en_UK/: lengths.csv  words.csv
simlish/: __init__.py  generate.py  setup.py  utils.py
simlish/profiles/en_UK/: weights.csv
simlish/profiles/en_US/: lengths.csv  weights.csv  words.csv
simlish/profiles/eo/: words.csv
simlish/profiles/es_ES/: lengths.csv  weights.csv
simlish/profiles/es_MX/: lengths.csv  weights.csv
simlish/profiles/fa/: words.csv
simlish/profiles/fi/: words.csv
simlish/profiles/fr_FR/: words.csv
simlish/profiles/fr_QC/: words.csv
simlish/profiles/is/: words.csv
simlish/profiles/ja/: words.csv
simlish/profiles/jam/: words.csv
simlish/profiles/km/: words.csv
simlish/profiles/ko/: words.csv
simlish/profiles/ma/: words.csv
simlish/profiles/nb/: words.csv
simlish/profiles/nl/: words.csv
simlish/profiles/or/: words.csv
simlish/profiles/pt_BR/: words.csv
simlish/profiles/ro/: words.csv
simlish/profiles/sv/: words.csv
simlish/profiles/sw/: words.csv
simlish/profiles/tts/: words.csv
simlish/profiles/vi_C/: words.csv
simlish/profiles/vi_N/: words.csv
simlish/profiles/vi_S/: words.csv
simlish/profiles/yue/: words.csv
simlish/profiles/zh_hans/: words.csv
simlish/profiles/zh_hant/: words.csv
