[bdist_wheel]
universal = 1

[metadata]
name = simlish
version = 1.0.0
license_file = LICENSE
author = Todd Parsons
author_email = todd.e.parsons@gmail.com
maintainer_email = todd.e.parsons@gmail.com
url = https://TEParsons.github.io/simlish
download_url = https://github.com/TEParsons/simlish/archive/refs/tags/v1.0.tar.gz
description = Python package for generating nonsense words which sound like a particular language.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.6
install_requires = 
    pandas
    numpy
[options.extras_require]
suggested = 
    GitPython
